--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -36,3 +36,9 @@ $tertiarydark-gu: linear-gradient(to top left, #7E996B, #9CBF86);
 $tertiarydark-gd: linear-gradient(to bottom right, #7E996B, #9CBF86);
 
 $font-stack: "San Francisco Display", "Segoe UI", "Helvetica Neue Lt Com", arial;
+
+$tiny: 575px;
+$small: 770px;
+$medium: 980px;
+$large: 1200px;
+$xlarge: 1700px;
