--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 @import "_vars.scss";
+@import "_navigation.scss";
 @import "_io.scss";
 @import "_typography.scss";
 *{
@@ -31,124 +32,79 @@ header.home section.intro {
   margin: 0;
 }
 
-nav {
-  display: flex;
-  justify-content: space-between;
-
-  background: $primarydark-gu;
-  padding: 2rem 2rem 5rem 2rem;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
+.logo {
+  @media screen and (max-width: $tiny) {
+    height: 4rem;
+    width: 10rem;
+    flex-grow: 0;
+    display: block;
+    background: #FFFFFF;
+    align-self: flex-start;
+  }
+  @media screen and (max-width: $small) {
+    height: 6rem;
+    width: 15rem;
+    flex-grow: 0;
+    order: 0;
+    display: block;
+    background: #FFFFFF;
+    align-self: flex-start;
+  }
 }
+
 
 .nav-meta {
-  display: flex;
-  justify-content: space-between;
-
-  width: 100%;
+  @media screen and (max-width: $tiny) {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 6rem;
+  }
+  display: none;
 }
-
-.logo {
-  height: 4rem;
-  width: 10rem;
-  flex-grow: 0;
+.nav-meta-small {
+  @media screen and (max-width: $tiny) {
+    display: none;
+  }
   display: block;
-  background: #FFFFFF;
-  align-self: flex-start;
+  align-self: center;
+  flex-grow: 0;
 }
 
 .login {
-  flex-grow: 1;
-  align-self: center;
-  text-align: right;
-  margin-right: 3rem;
-
-  color: #FFFFFF;
+  color: var(--primaryextralight);
+  display: block;
   a {
-    color: #FFFFFF;
-    font-size: 1.4rem;
-  }
-}
-
-.navToggle {
-  flex-grow: 0;
-  width: 4rem;
-  height: 4rem;
-  
-  background: #FFFFFF;
-}
-
-
-.page-links {
-  position: fixed;
-  z-index: 30;
-  
-  display: flex;
-  flex-direction: column;
-  
-  top: 0;
-  bottom: 0;
-  right: 0;
-
-  background: linear-gradient(to top, var(--primarydark), var(--primarylight));
-  padding: 7rem 5rem 0 5rem;
-  a {
-    flex-grow: 0;
-    align-self: flex-start;
-    z-index: 30;
-    
-    font-size: 3.6rem;
     color: #FFFFFF;
     text-decoration: none;
-
-    padding: 2rem 0;
-    float: left;
-    &:after {
-      content: "";
-      display: block;
-      height: .5rem;
-      
-      margin-top: 1.5rem;
-      margin-bottom: -2rem;
-      background: linear-gradient(to right, var(--secondarylight), var(--secondarydark)); 
-      border-radius: .25rem;
-      
-      width: 0%;
-      float: right;
-      transition: width .15s; 
+    border-bottom: .2rem solid var(--primaryextralight);
+    font-size: 1.8rem;
+    margin: 0 1rem;
+    padding: 1rem 0 .5rem 0;
+    transition: border-color .15s ease-in-out;
+    &:first-child {
+      margin-left: 0;
     }
-    &:hover:after {
-      opacity: 1;
-      width: 100%;
-      float: left;
+    &:last-child {
+      margin-right: 0;
     }
-    &.active:after {
-        width: 100%;
-        opacity: 1;
-    }
-    &.active:hover:after {
-      width: 100%;
-      background: linear-gradient(to right, var(--secondaryextralight), var(--secondarylight)); 
+    &:hover {
+      border-color: #FFFFFF;
     }
   }
-  &.active + .nav-meta:before {
-    content: "";
-    position: fixed;
-    z-index: 25;
-    display: block;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0,0,0,.3);
-  }
-  &.active + .nav-meta > .navToggle {
-    position: fixed;
-    z-index: 31;
-    top: 2rem;
-    right: 2rem;
+  @media screen and (min-width: $tiny) and (max-width: $small) {
+    display: none;
+    margin-bottom: 1rem;
+    font-size: 1.6rem;
+    text-align: right;
+    a {
+      font-size: 1.6rem;
+      padding: 0;
+      border-bottom: 0;
+    }
   }
 }
+
+
 
 .content {
   padding: 0 2rem;
@@ -258,6 +214,33 @@ nav {
   font-size: 1.6rem;
   display: block;
   margin-bottom: 2rem;
+  position: relative;
+  &:before {
+    content:'';
+    position: relative;
+    z-index: 2;
+    display: block;
+    float: left;
+    width: .6rem;
+    height: .6rem;
+    border: .4rem solid #FFFFFF;
+    background: var(--primarydark);
+    border-radius: 1rem;
+    margin-right: 1rem;
+    top: .3rem;
+  }
+  &:after {
+    content: '';
+    display: block;
+    width: 0rem;
+    height: 0rem;
+    border: .7rem solid transparent;
+    border-top: 1rem solid #FFFFFF;
+    position: absolute;
+    top: .9rem + .3rem;
+    left: 0;
+    z-index: 1;
+  }
 }
 
 .more-events {
